  (Matthieu Casanova)

- The autoreload option was not applied for existing buffers (#2587311)
  (Matthieu Casanova)

- When restoring the perspective the EditPanes are created with the default
  bufferSet scope and it is changed after according to the perspective.xml.
  Now it is immediately created with the good scope (#2645056)
  (Matthieu Casanova)

- Fixed horizontal mac scrolling with trackpad or Mighty Mouse (#2308694)
  (Seph Soliman)

- Fixed scrolling bug : when the TextArea was smaller than one visible line,
  if a line was wrapped, moving the cursor up or down in this line will not make
  was not the textarea scrolling to see the cursor (#2596087)
  (Matthieu Casanova)

- Fix for caret position display in status bar (tracker 2220033), relative
  position was not always correct. In conjunction with this, added checkboxes
  in the Status Bar option pane to make the various items in the caret position
  display configurable (tracker 737187) (Dale Anson).

- Fix for files in buffer switcher not ordered (tracker 2183929).  Sorting is
  now immediate on changing the preferences in the option dialog (Dale Anson)

- Fix for View->Show Buffer Switcher does not show the buffer switcher (tracker
  2179149) (Dale Anson) This menu item is intended to show the buffer switcher
  drop down, which isn't necessary if the buffer switcher is not visible. Now
  the visibility of this menu item is the same as the visibility of the buffer
  switcher.

- When having split view, dropping a file on the inactive textArea was opening
  it to the active textArea (#2321838) (Matthieu Casanova, Shlomy Reinstein)

- MD5 hash calculated inside read-lock, and also after buffer saves.
   (Alan Ezust)

- Fix drag & drop in BufferTabs, which broke as a result of BufferSet ignoring
  changes in buffer index (#2100690) (Shlomy Reinstein).

- Fix #1974620: Cannot use C+e C+BACK_QUOTE for close-docking-area.
  (Shlomy Reinstein)
